= ActiveMerchant CHANGELOG

== HEAD
* Wompi: support gateway [therufs] #4173
* Stripe Payment Intents: Add setup_purchase [aenand] #4178
* Ipg: Add new gateway [ajawadmirza] #4171

== Version 1.124.0 (October 28th, 2021)
* Worldpay: Add Support for Submerchant Data on Worldpay [almalee24] #4147
* dlocal: Add device_id and ip to payer object and add additional_data [aenand] #4116
* Adyen: Add network tokenization support to Adyen gateway [mymir] #4101
* Adyen: Add ACH Support [almalee24] #4105
* Moka: Support 3DS endpoint and update test url [dsmcclain] #4110
* Paysafe: Adjust profile data [meagabeth] #4112
* Stripe Payment Intents: Add support for claim_without_transaction_id field [BritneyS] #4111
* Mit: Add New Gateway [EsporaInfra] #3820
* Routex: add card type [rachelkirk] #4115
* Orbital: Scrub Payment Cryptogram [naashton] #4121
* Paysafe: Add support for airline fields [meagabeth] #4120
* Stripe and Stripe PI: Add Radar Session Option [tatsianaclifton] #4119
* PayArc: Fix billing address nil and phone_number issues [dsmcclain] #4114
* Routex: Update BIN numbers [rachelkirk] #4123
* UnionPay: Add Stripe's UnionPay test card to UnionPay BIN range #4122
* GlobalCollect: Support URL override [naashton] #4127
* PayConex: scrub bank account info from transcripts [mbreenlyles] #4128
* Moka: Remove additional transaction data from subsequent calls [naashton] #4129
* Moka: Ensure CvcNumber can be an empty string [jessiagee] #4130
* Maestro: Allow more card lengths for Luhnless bins [therufs] #4131
* Paysafe: Update supported countries [meagabeth] #4135
* Paysafe: Update field mapping for split_pay [meagabeth] #4136
* SafeCharge: Add handling for non-fractional currencies [dsmcclain] #4137
* CardStream: Support passing country_code in request [dsmcclain] #4139
* Adyen: Adjust phone number mapping [aenand] #4138
* Mit: Change how parameters are converted to JSON [tatsianaclifton] #4140
* Stripe: Add account_number to scrubbing [aenand] #4145